force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__CalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalculationMethod__c</fullName>
    <label>Indicator Result Calculation Method Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalculationMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>