force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__Denominator__c.field-meta.xml
<CustomField>
    <fullName>ssot__Denominator__c</fullName>
    <label>Denominator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Denominator</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>