force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__FlowDefinitionApiName__c.field-meta.xml
<CustomField>
    <fullName>ssot__FlowDefinitionApiName__c</fullName>
    <label>Flow Definition API Name</label>
    <length>80</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FlowDefinitionApiName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>