force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__FlowVersion__c.field-meta.xml
<CustomField>
    <fullName>ssot__FlowVersion__c</fullName>
    <label>Flow Version</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FlowVersion</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>