force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__IndicatorPerformancePeriodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndicatorPerformancePeriodId__c</fullName>
    <label>Indicator Performance Period</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndicatorPerformancePeriodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>