force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__IndicatorResultType__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndicatorResultType__c</fullName>
    <label>Indicator Result Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndicatorResultType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>