force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__MeasurementDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__MeasurementDate__c</fullName>
    <label>Measurement Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MeasurementDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>