force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__Numerator__c.field-meta.xml
<CustomField>
    <fullName>ssot__Numerator__c</fullName>
    <label>Numerator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Numerator</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>