force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__rel_1716726635772_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726635772_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndicatorResult_IndicatorPerformance_rel</label>
    <referenceTo>ssot__IndicatorPerformancePeriod__dlm</referenceTo>
    <relationshipLabel>IndicatorResult_IndicatorPerformance_rel</relationshipLabel>
    <relationshipName>rel_1716726635772_end</relationshipName>
    <type>Lookup</type>
</CustomField>