force-app/main/default/objects/ssot__IndicatorResult__dlm/fields/ssot__ResultValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResultValueNumber__c</fullName>
    <label>Result Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResultValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>